--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,11 @@
 			<version>1.4.185</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.barcode4j</groupId>
+			<artifactId>barcode4j</artifactId>
+			<version>2.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
