--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<properties>
-		<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding> 
+		<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
 		<javaee.version>3.0.2.Final</javaee.version>
 		<icefaces.version>4.0.0</icefaces.version>
 		<wildfly.version>8.1.0.Final</wildfly.version>
@@ -112,6 +112,11 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-exec</artifactId>
 			<version>1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.lowagie</groupId>
